[gd_scene load_steps=4 format=3 uid="uid://oxbvham6wg4v"]

[ext_resource type="Texture2D" uid="uid://cc83qbrultqm8" path="res://sprites/prep/spr_stick.png" id="1_l1p3d"]
[ext_resource type="Script" path="res://scripts/bhv_stick.gd" id="1_sq76r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5m1q"]
size = Vector2(146, 66)

[node name="ObjStick" type="Node2D"]
script = ExtResource("1_sq76r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_l1p3d")

[node name="SpritePosition1" type="Marker2D" parent="."]
position = Vector2(-32, 0)

[node name="SpritePosition2" type="Marker2D" parent="."]

[node name="SpritePosition3" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="Area2D" type="Area2D" parent="." groups=["servable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_f5m1q")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
